main/static/css/generic.css
* {
    font-family: Arial;
}

html,
body,
.everything,
.app {
    height: 100%;
    margin: 0px;
}
.app {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin: 0px;
}
.topmenu {
}
.body {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    position: relative;
}
.main {
    flex-grow: 2;
    width: 60%;
    position: relative;
    display: flex;
    flex-direction: column;
}
.sidebar {
    flex-grow: 1;
    width: 30%;
}

.teststuff {
    padding: 8px;
}

.topmenu {
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    align-items: stretch;
    flex-wrap: wrap;
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}
.topmenu select {
    display: block;
    padding: 4px 10px 4px 20px;
}
.topmenu button {
    display: block;
    padding: 4px 20px;
}

svg .node circle {
/*    fill: #ccffcc;*/
    stroke: #000;
}
svg .relation circle {
    fill: #000;
    stroke: #fff;
}
svg text {
    color: #000;
}

.foobar {
    position: absolute;
    left: 0px;
    top: 0px;
    right:0px;
    bottom: 0px;
}
div#map {
    min-height: 10px;
}


.multiview {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    position: relative;
    background-color: #c0ffee;
}
.rowcontainer {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    background: #ccffcc;
}
.columncontainer {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    background: #ffcccc;
}
.inner-column-container {
    flex-grow: 1;
    flex-shrink: 1;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}
.mvitem {
    flex-grow: 1;
    flex-shrink: 1;
    min-height: 10px;
    display: flex;
    flex-direction: column;
    background: #ffffff;

    box-sizing: border-box;
    /*border: 1px solid black;*/
}
.add-row, .add-column, .close-column {
    min-width: 20px;
    min-height: 20px;
}
.add-row, .add-column, .close-column, .resizer {
    position: relative;
    background: #cccccc;
    text-align: center;

    display: flex;
    justify-content: center;
    align-items: center;

    box-sizing: border-box;
    border: 1px solid black;
}
.resizer:active {
    border: 1px solid white;
}
.resizer.horizontal {
    height: 8px;
    vertical-align: middle;
    padding: 3px;
}
.resizer.vertical {
    width: 8px;
    padding: 3px;
}
.resizer.horizontal .wrap {
    display: inline-block;
    margin-top: -10px;
}
.resizer.vertical .wrap {
    display: inline-block;
    margin-left: -3px;
    line-height: 0.4em;
}
.resizer:focus {
    text-decoration: none;
}

.itemheader {
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    align-items: stretch;
    flex-wrap: wrap;
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}
.itemheader select {
    display: block;
    padding: 2px 5px 2px 10px;
}
.itemheader button {
    display: block;
    padding: 2px 10px;
}
select,
button.toggled:hover,
button {
    font-size: 100%;
    background: #fefefe;
    background-image: -webkit-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -moz-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -ms-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -o-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: linear-gradient(to bottom, #fefefe, #d1d1d1);
    text-decoration: none;
    box-sizing: border-box;
}
select:hover,
button.toggled,
button:hover {
    background: #d1d1d1;
    background-image: -webkit-linear-gradient(top, #d1d1d1, #fefefe);
    background-image: -moz-linear-gradient(top, #d1d1d1, #fefefe);
    background-image: -ms-linear-gradient(top, #d1d1d1, #fefefe);
    background-image: -o-linear-gradient(top, #d1d1d1, #fefefe);
    background-image: linear-gradient(to bottom, #d1d1d1, #fefefe);
    text-decoration: none;
}
select:focus,
button:focus {
    text-decoration: underline;
}
select,
button.toggled:active,
button {
    border: 2px outset #888888;
}
select:active,
button.toggled,
button:active {
    border: 2px inset #888888;
}
.itemheader,
.topmenu {
    background: #fefefe;
    background-image: -webkit-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -moz-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -ms-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: -o-linear-gradient(top, #fefefe, #d1d1d1);
    background-image: linear-gradient(to bottom, #fefefe, #d1d1d1);
}

.viewtab {
/*    width: 100%;*/
    height: 120px;
    flex-grow: 1;
    flex-shrink: 1;
    position: relative;
}
.map.viewtab {
    position: relative;
}
.map.viewtab, #map {
    max-width: 640px;
    max-height: 640px;
}
#map {
    position: absolute;
    width: 100%;
    height: 100%;
}


.info.viewtab,
.search.viewtab {
    padding: 5px;
}


label {
    display: block;
}
label span {
    display: inline-block;
    width: 140px;
}

.testnote {
    width: 100%;
    max-width: 40em;
}




.entrance {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100%;
    width: 100%;
}
.entrance .banner {
    height: 150px;
    width: 800px;
}
.entrance .topmenu {
    width: 800px;
}
.entrance .explanation {
    flex-grow: 1;
    width: 800px;
    padding: 10px;
    background: #eeeeee;
    box-sizing: border-box;
}


.right-end {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}
.closebutton {
    margin-right: 20px;
}



.search-result {
    color: #000044;
    cursor: pointer;
}
.search-result:hover {
    color: #444488;
}
.search-result:active {
    color: #8888cc;
}



.comments.viewtab {
    padding: 5px;
}
.comments header h1 {
    font-size: 120%;
    margin: 0px;
}
.comments header .subheader {
    font-size: 90%;
    margin: 0px;
    color: #444;
}
.comments header {
    border-bottom: 1px solid black;
    margin-bottom: 10px;
}
.comments form {
    margin-top: 10px;
}
.comments form textarea {
    display: block;
    width: 100%;
    box-sizing: border-box;
}
.comments form button {
    display: block;
    min-width: 50%;

}


.comments .comment header h2 {
    font-size: 100%;
    margin: 0px;
    padding: 0px;
    font-weight: bold;
}
.comments .comment header .subheader {
    font-size: 80%;
}
.comments .comment header {
    border-bottom: none;
    margin: 0px;
}
.comments .comment {
    border-bottom: 1px solid black;
}
.comments .comment-body {
    margin: 5px 0px;
}

